# fiber

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: FiberTracker.cpp  FiberTracker.h  WindowHandler.cpp  WindowHandler.h  main.cpp
src/Data/: ImageReaderWrapper.cpp  ImageReaderWrapper.h
src/GUI/: Connector.cpp  Connector.h  FileMenu.cpp  FileMenu.h  MainWindow.ui  ui_mainwindow.h  ui_mainwindowcopy (2).h  ui_mainwindowcopy.h
src/Rendering/: BoxView.cpp  BoxView.h  Fiber.cpp  Fiber.h  ImagePlaneView.cpp  ImagePlaneView.h  QVTKWrapper.cpp  QVTKWrapper.h  SelectionBox.cpp  SelectionBox.h  ViewCreator.cpp  ViewCreator.h  view.cpp  view.h
src/TensorComputations/: TensorComputations.cpp  TensorComputations.h
src/Tracking/: FiberTracker.cpp  FiberTracker.h
